The game will never end if none of the players has any planets. This patch makes sure that the game can only be started if all non-spectator players do have at least one planet.

Some internal variables are renamed to make the name match their
content/purpose much better.

REVIEW:113446
BUG:319808
FIXED-IN:4.12.1